syntax = "proto3";

// Timestamps are represented as integer number of nanoseconds, or 1e-9 of a
// second.

// Describes a request to update an event as a consequence of a series 
// update on the event. 
// 
message UpdateRequest {
  string user_id = 1;
  string event_id = 2; 
  
  // Information about the update: 
  string author = 3;
  uint64 timestamp = 4; 
  TimeRange data_extent = 5; 
}

// Describes a time range starting at `from` through `to`, inclusively.
// 
message TimeRange {
  uint64 from = 1; 
  uint64 to = 2; 
}

// If the call is sucessful, the metadata updater responds with the deadline
// for the update. This might be smaller than the deadline setting in the 
// configuration, since there might be other updates that need to be flushed.
// 
message UpdateResponse {
  uint64 deadline = 1;
}

service MetadataUpdaterService {
  rpc ScheduleUpdate (UpdateRequest) returns (UpdateResponse);
}

